welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:29: error: not found: value x
	for (i<- 1 to x) {
                      ^FlowerPot:33: error: not found: value x
	for (i<- 1 to x) {
                      ^